correct z-index

--- a/src/components/ButtonZap.css
+++ b/src/components/ButtonZap.css
@@ -2,8 +2,8 @@
     position: fixed;
     bottom: 20px;
     right: 30px;
-    z-index: 99;
-    padding: .75em;
+    z-index: 999;
+    padding: 1em;
     background-color: green;
     border-radius: .5em;
     border: 1px white solid;
@@ -13,6 +13,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.button-zap a {
+    max-height: 30px;
+    max-width: 30px;
 }
 
 .button-zap:hover {
