--- a/src/pages/BackToTop.css
+++ b/src/pages/BackToTop.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 20px;
     right: 100px;
-    z-index: 99;
+    z-index: 999;
 }
 
 .back-to-top button {
